RESOLVED FIXED10699
div with border-radius does not redraw properly if element inside div is resized
https://bugs.webkit.org/show_bug.cgi?id=10699
Summary div with border-radius does not redraw properly if element inside div is resized
Mike Filippone (donkeyentertain)
Reported 2006-09-02 20:00:45 PDT
If a div with a border-radius has another element inside of it, and that element is resized, the redraw of the div with the border-radius will be messed up. This bug seems to occur when the resize is called from (at least) an onClick() or a setTimeout(). However, if the resize is called in the body onLoad, or if it's enclosed in a script tag executed on the page's loading, the div will redraw properly.
Attachments
reduction/test case (360 bytes, text/html)
2006-09-02 20:04 PDT, Mike Filippone (donkeyentertain)
no flags
Account for border-radius on the moving edges (31.74 KB, patch)
2006-12-26 14:30 PST, mitz
darin: review+
Mike Filippone (donkeyentertain)
Comment 1 2006-09-02 20:04:14 PDT
Created attachment 10374 [details] reduction/test case
Mark Rowe (bdash)
Comment 2 2006-09-02 22:46:35 PDT
I can reproduce this with ToT. It appears to be an invalidation issue. Thanks for the great reduction Mike!
mitz
Comment 3 2006-11-27 12:55:48 PST
*** Bug 11098 has been marked as a duplicate of this bug. ***
mitz
Comment 4 2006-11-27 12:56:38 PST
Bug 6301 was similar to this, and I think you can improve the fix for that bug to cover this bug as well.
mitz
Comment 5 2006-12-26 14:30:19 PST
Created attachment 12045 [details] Account for border-radius on the moving edges
Darin Adler
Comment 6 2006-12-27 22:09:59 PST
Comment on attachment 12045 [details] Account for border-radius on the moving edges r=me
Sam Weinig
Comment 7 2006-12-28 08:24:37 PST
Landed in r18452.
Note You need to log in before you can comment on or make changes to this bug.