LayoutTests:

Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=10699
          div with border-radius does not redraw properly if element inside div is resized

        * fast/repaint/border-radius-repaint-expected.checksum: Added.
        * fast/repaint/border-radius-repaint-expected.png: Added.
        * fast/repaint/border-radius-repaint-expected.txt: Added.
        * fast/repaint/border-radius-repaint.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=10699
          div with border-radius does not redraw properly if element inside div is resized

        Test: fast/repaint/border-radius-repaint.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::repaintAfterLayoutIfNeeded):



Canonical link: https://commits.webkit.org/15496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18452 268f45cc-cd09-0410-ab3c-d52691b4dbfc